src/dts/tests/var_interface/var_interface.exp
Error: var_interface.js:2
  2: var agelimit: number = adult;
                            ^^^^^ class type: adult. This type is incompatible with
  2: var agelimit: number = adult;
                   ^^^^^^ number


Found 1 error
